files added in dev branch

--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "start":"node index.js",
     "dev":"nodemon index.js"
   },
-  "author": "srinithi",
+  "author": "sri_nithi",
   "license": "ISC",
   "description": "",
-  "devDependencies": {"nodemon": "^3.1.10"},
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  },
   "dependencies": {
     "express": "^5.1.0",
     "morgan": "^1.10.0"
